# ouro

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  action.yml  install.sh  ouro.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: config.rs  diff.rs  lib.rs  main.rs  parser.rs  patterns.rs  reporter.rs  runner.rs
tests/: integration.rs
tests/fixtures/: myc
tests/golden/: errors.myc  exit_nonzero.myc  multiline.myc  simple.myc
