[package]
name = "ouro"
version = "0.1.0"
edition = "2021"
description = "A golden test runner for language hackers"
license = "MIT"
keywords = ["testing", "golden", "compiler", "language"]
categories = ["development-tools::testing"]

[lib]
name = "ouro"

[[bin]]
name = "ouro"
path = "src/main.rs"
required-features = ["binary"]
doc = false

[dependencies]
colored = "3.0.0"
shlex = "1.3.0"
similar = "2.7.0"
toml = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
rayon = { version = "1.10", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["parallel"]
binary = ["clap", "parallel"]
parallel = ["rayon"]
